# mssql-mcp-server

./: Dockerfile  README.md  main.py  pyproject.toml  smithery.yaml
src/mssql_mcp_server/: server.py
