[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mssql-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pymssql>=2.3.2",
]

[project.scripts]
mssql-mcp-server = "mssql_mcp_server.main:main"
